test/bad/functions/return4.px

func f(Int x) Bool def
    return x

func main() Int def
    return 0
